--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>The Nail Lab by Tasha</title>
+<title>The Nail Lab by Tashy</title>
 
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -22,7 +22,7 @@
 <!-- LOADER -->
 <div id="loader">
     <h1>The Nail Lab</h1>
-    <span>by Tasha</span>
+    <span>by Tashy</span>
 </div>
 
 <!-- HERO -->
@@ -30,7 +30,7 @@
     <div class="hero-overlay"></div>
     <div class="hero-content">
         <h1>The Nail Lab</h1>
-        <span>by Tasha</span>
+        <span>by Tashy</span>
         <p>Luxury Nail Art • Precision • Elegance</p>
         <a href="#booking" class="btn-gold">Book Appointment</a>
     </div>
@@ -40,7 +40,7 @@
 <section class="about">
     <h2>Luxury Meets Art</h2>
     <p>
-        At <strong>The Nail Lab by Tasha</strong>, every nail set is designed with elegance,
+        At <strong>The Nail Lab by Tashy</strong>, every nail set is designed with elegance,
         precision, and premium products. This is not just a service — it’s an experience.
     </p>
 </section>
@@ -154,7 +154,7 @@
 <!-- FOOTER -->
 <footer class="footer">
     <div class="footer-content">
-        <h3>The Nail Lab by Tasha</h3>
+        <h3>The Nail Lab by Tashy</h3>
         <p>Luxury Nail Art • Precision • Elegance</p>
 
         <div class="social-icons">
@@ -163,7 +163,7 @@
             <a href="tiktok.com/@thenaillabbytashy"><i class="fab fa-tiktok"></i></a>
         </div>
 
-        <span>© 2026 The Nail Lab by Tasha. All rights reserved.</span>
+        <span>© 2026 The Nail Lab by Tashy. All rights reserved.</span>
     </div>
 </footer>
 
@@ -205,7 +205,7 @@
     // Handle login
     loginBtn.onclick = function() {
         const password = document.getElementById("adminPassword").value;
-        if (password === "tasha123") {
+        if (password === "tashy123") {
             localStorage.setItem("adminLoggedIn", "true");
             window.location.href = "admin.html";
         } else {
