--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="hero-overlay"></div>
     <div class="hero-content">
         <h1>The Nail Lab</h1>
-        <span>by Tashy</span>
+        <h1>by Tashy</h1>
         <p>Luxury Nail Art • Precision • Elegance</p>
         <a href="#booking" class="btn-gold">Book Appointment</a>
     </div>
