--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- LOADER -->
 <div id="loader">
     <h1>The Nail Lab</h1>
-    <span>by Tashy</span>
+    <h1>by Tashy</h1>
 </div>
 
 <!-- HERO -->
